<resources>
    <string name="app_name">DashBoard</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="library">Library</string>
    <string name="laboratory">Laboratory</string>
    <string name="sports">Sports</string>
    <string name="it_club">IT Club</string>

    <!--label name-->
    <string name="facility">FACILITY</string>
    <string name="administration">ADMINISTRATION</string>
    <string name="gallery">GALLERY</string>
    <string name="notification">ACADEMIC</string>
    <string name="explore">MORE.......</string>
    <string name="contactUs">Address: 62, Nazimuddin Road, Dhaka-1100
Telephone: +88 02-57300204

Mobile: +88 01771242644, 01819023177

Email: info@sbpgc.edu.bd
Web: www.sbpgc.edu.bd</string>
</resources>
